syntax = "proto3";

package edu.sjsu.cmpe172.hellohello;

// The gRPC service definition.
service PostReplicaService {
  // Server sends a NewPostRequest to a replica; replica returns a single reply.
  rpc newPost(NewPostRequest) returns (NewPostReply);

  // Get the last transaction ID from the replica.
  rpc getLastTxn(GetLastTxnRequest) returns (GetLastTxnReply);

  // Leader sends SyncWithLeaderRequest; leader streams missing updates.
  rpc syncWithLeader(stream SyncWithLeaderRequest) returns (SyncWithLeaderReply);
}

message GetLastTxnRequest {
  // Empty message
}

message GetLastTxnReply {
  int64 lastTxn = 1;
}

// Request to create a new post.
message NewPostRequest {
  string message = 1;
  string user = 2;
  int64 timestamp = 3;
  int64 txn = 4;
  int64 leaderZxid = 5;
}

// Possible outcomes for adding a post.
enum AddPostStatus {
  // something unexpected happened
  ADD_UNSPECIFIED = 0;
  // post was added successfully
  ADD_SUCCESS = 1;
  // post addition failed
  ADD_FAILED = 2;
  // received a transaction without receiving a prior transaction
  ADD_MISSING_TXN = 3;
  // the leader is not recognized by this replica
  ADD_NOT_MY_LEADER = 4;
}

// Reply after attempting to add a post.
message NewPostReply {
  AddPostStatus status = 1;
  int64 last_version = 2;
}

// Possible outcomes for adding a post.
enum SyncWithLeaderStatus {
  // something unexpected happened
  SYNC_UNSPECIFIED = 0;
  // sync was successful
  SYNC_SUCCESS = 1;
  // sync failed
  SYNC_FAILED = 2;
  // received a transaction without receiving a prior transaction
  SYNC_MISSING_TXN = 3;
  // the leader is not recognized by this replica
  SYNC_NOT_MY_LEADER = 4;
}

// Request from follower to sync posts with the leader.
message SyncWithLeaderReply {
  SyncWithLeaderStatus status = 1;
}

// Streamed reply containing posts newer than the followerâ€™s last txn.
message SyncWithLeaderRequest {
  string message = 1;
  string author = 2;
  int64 timestamp = 3;
  int64 txn= 4;
  int64 leaderZxid = 5;
}
